--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -19,10 +19,11 @@
         android:layout_marginBottom="16dp">
 
         <ImageView
+            android:id="@+id/ic_arrow_left"
             android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/ic_arrow_left"
+            android:layout_height="match_parent"
             android:contentDescription="Back Arrow"
+            android:src="@drawable/ic_arrow_left"
             app:tint="@android:color/black" />
 
         <TextView
