--- a/app/src/main/res/layout/activity_tambah.xml
+++ b/app/src/main/res/layout/activity_tambah.xml
@@ -15,6 +15,7 @@
         android:layout_marginBottom="16dp">
 
         <ImageView
+            android:id="@+id/ic_arrow_left"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_arrow_left"
