penyesuaian_expereience_tambah

--- a/app/src/main/res/layout/activity_tambah.xml
+++ b/app/src/main/res/layout/activity_tambah.xml
@@ -5,8 +5,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background">
 
+
+
     <!-- Header -->
     <LinearLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -31,16 +34,19 @@
             android:textColor="@android:color/black"
             android:layout_marginStart="16dp" />
     </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/header"
+        android:padding="16dp">
     <!-- Container utama -->
 
-    <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_marginTop="50dp"
-        android:layout_centerHorizontal="true"
-        android:padding="16dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:padding="16dp">
         <!-- Input Judul Kuis -->
         <TextView
             android:layout_width="wrap_content"
@@ -59,7 +65,7 @@
             android:padding="12dp"
             android:layout_marginBottom="16dp" />
 
-        <!-- Bagian Pertanyaan dan Opsi -->
+        <!-- Area Pertanyaan dan Opsi -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -121,14 +127,13 @@
                 android:hint="Waktu"
                 android:padding="8dp"
                 android:backgroundTint="@android:color/darker_gray" />
-            <EditText
-                android:id="@+id/editTextDifficult"
+            <Spinner
+                android:id="@+id/spinner_difficulty"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Level"
-                android:padding="8dp"
-                android:backgroundTint="@android:color/darker_gray" />
-
+                android:layout_marginTop="16dp"
+                android:spinnerMode="dropdown"
+                android:entries="@array/difficulty_levels" />
         </LinearLayout>
 
         <!-- Tombol Tambah Kuis -->
@@ -151,4 +156,5 @@
             android:padding="12dp"
             android:textStyle="bold" />
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
